--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "clsx": "^2.1.1",
     "joi": "^17.13.3",
     "lucide-react": "^0.479.0",
+    "luxon": "^3.5.0",
     "mongoose": "^8.12.1",
     "next": "14.2.24",
     "react": "^18",
     "react-dom": "^18",
+    "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
   },
