upload images on cloud when we add blogs

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 MONGODB_URL=mongodb+srv://mohitsingh872937:QfsReNVTC2rngNF1@cluster0.eo2x3.mongodb.net/cms?retryWrites=true&w=majority
-# BASE_URL=http://localhost:3000/api/
 NEXT_PUBLIC_BASE_URL=http://localhost:3000/api/
-
 NEXT_PUBLIC_LEAD_URL=https://leads.realtyassistant.in/api/lead
+CLOUDINARY_CLOUD_NAME=djvtqa3og
+CLOUDINARY_API_KEY=925119728716261
+CLOUDINARY_API_SECRET=dIdfsrilY07eSNHHVfIeBKmNxuM
