--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tanstack/react-table": "^8.21.2",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.6.0",
     "clsx": "^2.1.1",
     "joi": "^17.13.3",
     "lucide-react": "^0.479.0",
     "luxon": "^3.5.0",
     "mongoose": "^8.12.1",
     "next": "14.2.24",
+    "next-cloudinary": "^6.16.0",
     "react": "^18",
     "react-dom": "^18",
     "react-toastify": "^11.0.5",
