implement rich text editor

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ NEXT_PUBLIC_LEAD_URL=https://leads.realtyassistant.in/api/lead
 CLOUDINARY_CLOUD_NAME=djvtqa3og
 CLOUDINARY_API_KEY=925119728716261
 CLOUDINARY_API_SECRET=dIdfsrilY07eSNHHVfIeBKmNxuM
+EDITOR_KEY=vxy9ofn7k06b4c8ssmkp12qutc72oxlli7m7ibx52luwfxli
