--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next-cloudinary": "^6.16.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-select": "^5.10.1",
     "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
