implement login and signup functionality

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ CLOUDINARY_CLOUD_NAME=djvtqa3og
 CLOUDINARY_API_KEY=925119728716261
 CLOUDINARY_API_SECRET=dIdfsrilY07eSNHHVfIeBKmNxuM
 NEXT_PUBLIC_EDITOR_KEY=vxy9ofn7k06b4c8ssmkp12qutc72oxlli7m7ibx52luwfxli
+JWT_SECRET=yourSuperSecretKey
