--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
-MONGODB_URL=mongodb+srv://mohitsingh872937:QfsReNVTC2rngNF1@cluster0.eo2x3.mongodb.net/cms?retryWrites=true&w=majority
-# BASE_URL=http://localhost:3000/api/
-NEXT_PUBLIC_BASE_URL=http://localhost:3000/api/
-
-NEXT_PUBLIC_LEAD_URL=https://leads.realtyassistant.in/api/lead
+MONGODB_URL=
+NEXT_PUBLIC_BASE_URL=
+NEXT_PUBLIC_LEAD_URL=
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+NEXT_PUBLIC_EDITOR_KEY=
+JWT_SECRET=
