--- a/package.json
+++ b/package.json
@@ -31,10 +31,13 @@
     "@tanstack/react-table": "^8.21.2",
     "@tinymce/tinymce-react": "^6.0.0",
     "axios": "^1.8.3",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.6.0",
     "clsx": "^2.1.1",
     "joi": "^17.13.3",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.479.0",
     "luxon": "^3.5.0",
     "mongoose": "^8.12.1",
