--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@editorjs/list": "^2.0.6",
     "@editorjs/quote": "^2.7.6",
     "@editorjs/table": "^2.4.4",
+    "@radix-ui/react-accordion": "^1.2.4",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-collapsible": "^1.1.3",
