implement mail functionlaity

--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ CLOUDINARY_API_KEY=925119728716261
 CLOUDINARY_API_SECRET=dIdfsrilY07eSNHHVfIeBKmNxuM
 NEXT_PUBLIC_EDITOR_KEY=vxy9ofn7k06b4c8ssmkp12qutc72oxlli7m7ibx52luwfxli
 JWT_SECRET=yourSuperSecretKey
+MAILTRAP_USER=7e1a12d6c6a071
+MAILTRAP_PASS=beb5a547be3791
