--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "mongoose": "^8.12.1",
     "next": "14.2.24",
     "next-cloudinary": "^6.16.0",
+    "nodemailer": "^6.10.1",
     "react": "^18",
     "react-dom": "^18",
     "react-select": "^5.10.1",
