--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.6.0",
     "clsx": "^2.1.1",
+    "input-otp": "^1.4.2",
     "joi": "^17.13.3",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
